--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -4,18 +4,19 @@
   height: 100%;
   position: fixed;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
   gap: 20px;
+  background-color: lightslategrey;
 }
 
 .middleScreen {
-  width: 10%;
-  min-width: 100px;
+  width: 15%;
+  min-width: 120px;
   height: 7%;
   min-height: 35px;
-  background-color: pink;
+  background-color: lightcyan;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -23,13 +24,22 @@
 }
 
 .middleScreen:hover {
-  width: 12%;
-  min-width: 100px;
+  width: 20%;
+  min-width: 130px;
   height: 7%;
   min-height: 35px;
-  background-color: blue;
+  margin-bottom: 1%;
+  background-color: rgb(24, 20, 248);
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
+}
+
+@media only screen and (max-width: 834px) {
+  .container {
+    flex-direction: column;
+  }
+}
+@media only screen and (max-width: 375px) {
 }
